--- a/playground/index.html
+++ b/playground/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="./styles.css" />
-    <title>square-engine</title>
+    <title>Blöb2D</title>
   </head>
 
   <body>
