--- a/playground/index.html
+++ b/playground/index.html
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+    <div class="button"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.3.7/pixi.min.js"></script>
     <script src="./scripts.js"></script>
   </body>
